package me.kendler.yanik.model.shot.attributeDefinitions;

import jakarta.persistence.*;

@Entity
public class ShotTextAttributeDefinition extends ShotAttributeDefinitionBase {
}