@startuml
skinparam linetype ortho

entity User {
  * id : Long
  --
  * username : string
  * email : string
}

entity Shotlist {
  * id : Long
  * user : User
  * template: ShotlistTemplate
  * scenes: Set<Scene>
  --
  * name : string
  * description : string
  * created_at : LocalDateTime
}

User ||--o{ Shotlist

/'
    TEMPLATE
'/

entity ShotlistTemplate {
    * id : Long
    * user : User
    * sceneAttributes: Set<SceneAttributeTemplate>
    * shotAttributes: Set<ShotAttributeTemplateBase>
    --
    * name : string
    * description : string
    * created_at : LocalDateTime
}

User ||--o{ ShotlistTemplate

abstract ShotAttributeTemplateBase {
    * id : Long
    * shotlistTemplate : ShotlistTemplate
    --
    * name : string
    * position : int
}

ShotlistTemplate ||--o{ ShotAttributeTemplateBase

entity ShotSingleSelectAttributeTemplate {
    * options : Set<ShotSelectAttributeOptionTemplate>
    --
}

entity ShotMultiSelectAttributeTemplate {
    * options : Set<ShotSelectAttributeOptionTemplate>
    --
}

entity ShotSelectAttributeOptionTemplate {
    * id : Long
    --
    * name : string
    * position: int
}

ShotSingleSelectAttributeTemplate ||--o{ ShotSelectAttributeOptionTemplate
ShotMultiSelectAttributeTemplate ||--o{ ShotSelectAttributeOptionTemplate

entity ShotTextAttributeTemplate {
    --
}

ShotAttributeTemplateBase <|-down- ShotSingleSelectAttributeTemplate
ShotAttributeTemplateBase <|-down- ShotMultiSelectAttributeTemplate
ShotAttributeTemplateBase <|-down- ShotTextAttributeTemplate

entity SceneAttributeTemplate {
    * id : Long
    * shotlistTemplate : ShotlistTemplate
    --
    * name : string
    * position : int
}

ShotlistTemplate ||--o{ SceneAttributeTemplate

/'
    DEFINITIONS
'/

abstract ShotAttributeDefinitionBase {
    * id : Long
    * shotlist : Shotlist
    --
    * name : string
    * position : int
}

Shotlist ||--o{ ShotAttributeDefinitionBase

entity ShotSingleSelectAttributeDefinition {
    * options : Set<ShotSelectAttributeOptionDefinition>
    --
}

entity ShotMultiSelectAttributeDefinition {
    * options : Set<ShotSelectAttributeOptionDefinition>
    --
}

entity ShotSelectAttributeOptionDefinition {
    * id : Long
    --
    * name : string
    * position: int
}

ShotSingleSelectAttributeDefinition ||--o{ ShotSelectAttributeOptionDefinition
ShotMultiSelectAttributeDefinition ||--o{ ShotSelectAttributeOptionDefinition

entity ShotTextAttributeDefinition {
    --
}


ShotAttributeDefinitionBase <|-down- ShotSingleSelectAttributeDefinition
ShotAttributeDefinitionBase <|-down- ShotMultiSelectAttributeDefinition
ShotAttributeDefinitionBase <|-down- ShotTextAttributeDefinition

entity SceneAttributeDefinition {
    * id : Long
    * shotlist : Shotlist
    --
    * name : string
    * position : int
}

Shotlist ||--o{ SceneAttributeDefinition

/'
    SCENES ANS SHOTS
'/

abstract ShotAttributeBase {
    * id : Long
    * shot : Shot
    --
}

entity ShotSingleSelectAttribute {
    * value: ShotSelectAttributeOptionDefinition
    * definition : ShotSingleSelectAttributeDefinition
    --
}

ShotSingleSelectAttribute }o--|| ShotSelectAttributeOptionDefinition
ShotSingleSelectAttribute }o--|| ShotSingleSelectAttributeDefinition

entity ShotMultiSelectAttribute {
    * value: List<ShotSelectAttributeOptionDefinition>
    * definition : ShotMultiSelectAttributeDefinition
    --
}

ShotMultiSelectAttribute }o--o{ ShotSelectAttributeOptionDefinition
ShotMultiSelectAttribute }o--|| ShotMultiSelectAttributeDefinition

entity ShotTextAttribute {
    * definition : ShotTextAttributeDefinition
    --
    * value : string
}

ShotTextAttribute }o--|| ShotTextAttributeDefinition

ShotAttributeBase <|-down- ShotSingleSelectAttribute
ShotAttributeBase <|-down- ShotMultiSelectAttribute
ShotAttributeBase <|-down- ShotTextAttribute

entity Scene {
    * id : Long
    * shotlist : Shotlist
    * attributes: Set<SceneAttribute>
    * shots: Set<Shot>
    --
    * number : int
}

entity SceneAttribute {
    * id : Long
    * scene : Scene
    * definition : SceneAttributeDefinition
    --
    * value : string
}

Scene ||--o{ SceneAttribute
SceneAttribute }o--|| SceneAttributeDefinition

entity Shot {
    * id : Long
    * scene : Scene
    * attributes: Set<ShotAttributeBase>
    --
    * number: int
    * isSubshot: boolean
}

Scene ||--o{ Shot

Shot ||--o{ ShotAttributeBase
Shotlist ||--o{ Scene

/'
    NOTES
'/

entity ShotNote {
    * id : Long
    * shot : Shot
    * user : User
    --
    * text : string
    * created_at : LocalDateTime
}

Shot ||--o{ ShotNote

/'
    SHARED USERS
'/

entity Collaborator {
    * id : Long
    * user : User
    * shotlist : Shotlist
    --
    * role : Role
}

enum Role {
  EDITOR
  VIEWER
}

Collaborator }o--|| Role
Collaborator }o--|| Shotlist
Collaborator }o-right-|| User

@enduml